# mrpc

./: .gitignore  BUILD  MODULE.bazel  README.md  go.mod  pyproject.toml  python.BUILD
doc/: develop.md  mrpc.md  server.md
example/helloworld/: .bazelrc  BUILD  MODULE.bazel  greeter_client.cc  greeter_server.cc  helloworld.mrpc.h  helloworld.yaml
example/helloworld/cpp/: BUILD  greeter_client.cc  greeter_server.cc  hello_handler.cc  hello_handler.h  helloworld.mrpc.h
example/helloworld/go/: BUILD  greeter_client.go  greeter_server.go  helloworld.mrpc.go
example/helloworld/go/helloworld/: helloworld.mrpc.go
example/helloworld/python/: BUILD  greeter_client.py  greeter_server.py
example/helloworld/python/helloworld_mrpc/: __init__.py  helloworld_mrpc.py
include/: BUILD  mrpc.h
include/mrpc/: call.h  mrpc.h  status.h
include/mrpcpp/: callback.h  client.h  json.h  mrpcpp.h  server.h  status.h
scripts/: BUILD  helloworld_build.sh  mrpc_gen.bzl
src/: BUILD  mrpc.cc
src/client/: channel.cc  channel.h  client.cc  client.h  target.h
src/common/: c_cpp_trans.h  status.h
src/core/: BUILD  id.cc
src/core/client/: channel.cc  channel.h  client.cc  client.h  connection.cc  connection.h  target.h
src/core/common/: c_cpp_trans.h  connection.h  id.cc  parser.h
src/core/server/: connection.cc  connection.h  endpoint.h  server.cc  server.h  target.h
src/cpp/: BUILD  client.cc  server.cc
src/go/: BUILD  callback.go  client.go  error.go  parser.go  queue.go  server.go  server_utils.go  status.go
src/python/: BUILD
src/python/mrpc/: __init__.py  client.py  defs.py  id.py  json.py  queue.py  server.py  server_utils.py  status.py
test/: parser.cc
