"""
helloworld example
"""
module(
    name = "helloworld_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "mrpc", version = "0.0.1")

local_path_override(
    module_name = "mrpc",
    path = "../../",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)